# gnostr-sha256

./: .gitignore  Cargo.toml  GNUmakefile  LICENSE  README.md  cargo.mk  gnostr-sha256-test.c  gnostr-sha256.c  gnostr-sha256.mk
.github/workflows/: macos-matrix.yml  macos-pre-release.yml  macos-release.yml  ubuntu-matrix.yml  ubuntu-pre-release.yml  ubuntu-release.yml
src/: gitminer.rs  lib.rs  main.rs
tests/: gnostr-sha256-test.c
